--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -301,3 +301,13 @@ footer {
 		width:100%
 	}
 }
+
+.square-card-person {
+	height: 100px;
+	width: 100px;
+	border-radius:12px ;
+	background-size: contain;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-image: url("./../images/man.png");
+}
